--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
-import numpy as np
-import joblib
-import time
+streamlit 
+pandas
+numpy
+joblib
+time
